fixed iframe display on mobile

--- a/sass/_custom.scss
+++ b/sass/_custom.scss
@@ -1,5 +1,5 @@
 body {
-  position: relative;
+  box-sizing: border-box;
   text-align: center;
   background: #fff url(../img/stripe_bg.png) repeat scroll 0 0;
   font-family: 'Source Sans Pro', sans-serif;
@@ -13,7 +13,13 @@ body {
 
 header {
   background-color: #000099;
-  box-shadow: rgba(0,0,0,0.8) 0 0 10px;
+  box-shadow: rgba(0,0,0,0.8) 0 5px 5px;
+  min-width: 360px;
+  border-bottom: 5px solid #FFCC00;
+}
+
+.wrapper {
+  position: relative;
 }
 
 .card {
@@ -21,32 +27,57 @@ header {
   height: 500px;
   width: 500px;
   margin: 20px;
-  border-radius: 10px;
   cursor: pointer;
 }
 
 .front {
   background-color: #000099;
   border-radius: 10px;
-  box-shadow: rgba(0,0,0,0.8) 0 0 10px;
+  box-shadow: rgba(0,0,0,0.8) 0 5px 5px;
 }
 
 .back {
   background-color: #d3d3d3;
   border-radius: 10px;
-  box-shadow: rgba(0,0,0,0.8) 0 0 10px;
+  box-shadow: rgba(0,0,0,0.8) 0 5px 5px;
+}
+
+.front-wrapper {
+  height: 460px;
+  width: 460px;
+  border: 5px solid #FFCC00;
+  border-radius: 10px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.back-wrapper {
+  height: 460px;
+  width: 460px;
+  border: 5px solid #000099;
+  border-radius: 10px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  overflow: hidden;
 }
 
 h1 {
   display: inline-block;
-  margin-top: -2px;
+  margin-top: -5px;
   font-size: 4em;
-  padding: 20px;
+  padding: 40px;
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
   box-shadow: rgba(0,0,0,0.8) 0 5px 5px;
   color: #fff;
   background-color: #000099;
+  border-bottom: 5px solid #FFCC00;
+  border-left: 5px solid #FFCC00;
+  border-right: 5px solid #FFCC00;
 }
 
 
@@ -59,16 +90,18 @@ h2 {
   font-size: 2em;
 }
 
+h3 {
+  margin: 10px;
+}
+
 p {
   text-align: justify;
   padding: 50px;
 }
 
 iframe {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  width: 100% !important;
+  height: 400px !important;
 }
 
 .contact {
@@ -81,8 +114,8 @@ iframe {
 }
 
 .contact a {
-  height: 15px; 
   width: 70px; 
+  height: 20px;
   padding: 8px 16px;
   font-size: 1.2em;
   background-color: #000099;
