--- a/sass/_media-queries.scss
+++ b/sass/_media-queries.scss
@@ -9,9 +9,43 @@
     height: 320px;
   }
 
+  .front-wrapper {
+    height: 280px;
+    width: 280px;
+  }
+
+  .back-wrapper {
+    height: 280px;
+    width: 280px
+  }
+
   p {
-    padding: 5px;
-    font-size: 0.8em;
+    padding: 10px;
+    font-size: 0.7em;
+  }
+
+  iframe {
+  display: none;
+  }
+
+  .contact {
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    margin-left: -50px;
+    bottom: 0;
+    transform: rotate(0deg);
+  }
+
+  .contact a {
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    margin-left: -50px;
+    border-bottom-left-radius: 0px;
+    border-bottom-right-radius: 0px;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
   }
 
 }
